# Genshin-Paisitioning-App

./: .gitignore  Cargo.toml  README.md  config.json
.github/workflows/: check.yml  ci.yml  release.yml  test.yml
resources/: manifest.xml
src/: build.rs  main.rs
src/app/: config.rs  installer.rs  mod.rs  path.rs  tray.rs  updater.rs  utils.rs
src/cvat/: bindings.rs  dylib.rs  error.rs  features.rs  implements.rs  mod.rs  state.rs  test.rs  tracking.rs  translations.rs
src/events/: mod.rs
src/models/: app.rs  mod.rs  track.rs  ws.rs
src/views/: confirm.rs
src/websocket/: handler.rs  mod.rs  ws.rs
src/websocket/handlers/: config_handler.rs  mod.rs  track_handler.rs  update_handler.rs
