[package]
name = "genshin_paisitioning_app"
authors = ["Hayts"]
description = "원신 파이지셔닝 앱"
version = "1.1.3"
repository = "https://github.com/Haytsir/Genshin-Paisitioning-App"
edition = "2021"
build = "src/build.rs"

[dependencies]
lazy_static = "1.4.0"
libc = "0.2" # c 라이브러리를 이용하는데 필요
libloading = "0.8"
tokio = { version = "1", features = ["full"]} # 웹 서버 구현에 필요 ["macros", "sync", "rt-multi-thread"] 
tokio-stream = "0.1" # 웹 서버 구현에 필요
warp = "0.3" # 웹 서버 구현에 필요
serde = {version = "1", features = ["derive"] } # JSON의 serialize와 deserialize에 필요
serde_json = "1" # JSON의 serialize와 deserialize에 필요
futures = { version = "0.3", default-features = false } # WebSocket의 비동기 데이터 스트림을 처리하는 데 필요
futures-util = "0.3"
uuid = { version = "1", features = ["serde", "v4"] } # 접속자의 고유 ID 생성에 필요
log = "*"
env_logger = "*"
threadpool = "1"
crossbeam-channel = "0.5"
once_cell = "1"
reqwest = { version = "0.11", features = ["stream", "blocking", "json"] } # cvat를 다운로드하는 요청을 보내기 위함
zip="*"
sevenz-rust={version="*", features=["aes256"]}
directories = "5"
winapi = {version="*", features = ["securitybaseapi", "wincon", "winuser"]}
winreg = "*"
tray-item = {git="https://github.com/fgimian/tray-item-rs.git", branch="switch-to-windows-rs"}
config = "*"
sysinfo = "*"
msgbox = "0.7.0"

[build-dependencies]
winres = "0.1"